# owls

./: .gitignore  config.yml  debate_20250816_201214.md  main.py  pyproject.toml  sample.py
src/: __init__.py  cli.py  config.py
